@@ -1,0 +1,24 @@
+server {
+    listen       80;
+    server_name  biomaj-expose;
+
+    location / {
+        #auth_request /auth;
+        autoindex on;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
+    location = /auth {
+        internal;
+        proxy_pass http://biomaj-internal-proxy/api/daemon/expose/;
+        proxy_pass_request_body off;
+        proxy_set_header Content-Length "";
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Autorization;
+    }
+
+
+}
+
