@@ -3,6 +3,12 @@
 ################################################################
 [api]
 
+
+[docker]
+endpoint = "unix:///var/run/docker.sock"
+exposedByDefault = false
+watch = true
+
 ################################################################
 # Consul Catalog Provider
 ################################################################
